@@ -219,10 +219,10 @@ typedef name_info*name_pointer;
 typedef name_pointer*hash_pointer;
 extern char byte_mem[];
 extern char*byte_mem_end;
+extern char*byte_ptr;
 extern name_info name_dir[];
 extern name_pointer name_dir_end;
 extern name_pointer name_ptr;
-extern char*byte_ptr;
 extern name_pointer hash[];
 extern hash_pointer hash_end;
 extern hash_pointer h;
