@@ -1,3 +1,12 @@
+2021-02-16  Andreas Scherer  <https://ascherer.github.io>
+
+	* comm-w2c.h: Reshuffle byte_mem pointer.
+
+2021-02-16  Andreas Scherer  <https://ascherer.github.io>
+
+	* comm-w2c.ch,
+	* common.h: Restore comment from 'cweave.w' (3.64c).
+
 2021-02-11  Andreas Scherer  <https://ascherer.github.io>
 
 	* texinputs/pdfctwimac.tex: Fix bug in color setter.
